--- a/css/style.css
+++ b/css/style.css
@@ -2386,7 +2386,7 @@ body.menu-open {
     }
 
     .process-section {
-        padding: 6rem 2rem;
+        padding: 4.5rem 4.5rem 4.5rem 3rem;
     }
 
     .process-section > .row {
