--- a/css/Utils.css
+++ b/css/Utils.css
@@ -350,7 +350,7 @@ ul {
 
 /* animations page */
 .complete-animations, .complete-films{
-  background-color: rgba(69, 69, 69, 0.95);
+  background-color: rgb(87, 84, 84);
 }
 
 .animations-grid-div{
