--- a/css/Utils.css
+++ b/css/Utils.css
@@ -230,16 +230,14 @@ ul {
 
 /* project page */
 .complete-project{
-  padding: 0 1rem 3rem 6rem;
-  background-color: rgba(0, 0, 0, 0.950);
-  margin: 0;
+  background-color: #232931;
 }
 
 .photos-grid-div{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
-  padding: 1rem 0 2rem 0;
+  padding: 0 4rem 4rem 4rem;
 }
 
 .photos-side-headings{
@@ -249,7 +247,7 @@ ul {
   padding: 1rem 0 1rem 0;
   color: #FFBC59;
   text-align: center;
-  padding: 1rem 0;
+  padding: 2rem 0;
 }
 
 .img-project{
@@ -269,16 +267,11 @@ ul {
 }
 
 /* videos grid */
-.complete-films{
-  padding: 1rem 1rem 1rem 6rem;
-  background-color: rgba(238, 238, 238, 0.742);
-}
-
 .videos-grid-div{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
-  padding: 0 1rem 2rem 0;
+  padding: 0 1rem 3rem 2rem;
   place-items: center end;
 }
 
@@ -286,7 +279,7 @@ ul {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem 1rem;
-  padding: 0 1rem 2rem 0;
+  padding: 0;
   place-items: center end;
 }
 
@@ -349,29 +342,26 @@ ul {
 }
 
 /* animations page */
-.complete-animations, .complete-films{
-  background-color: rgb(87, 84, 84);
-}
-
 .animations-grid-div{
   display: grid;
   grid-template-columns: 1fr;
   gap: 1rem;
   place-items: center center;
-  padding-bottom: 2rem;
+  background-color: #232931;
+  padding-bottom: 3rem;
 }
 
 .animations-div-2{
-  padding: 2rem;
+  padding: 2rem 4rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
 }
 
 .vid{
-  height: 650px;
+  height: 700px;
   width: 100%;
-  padding: 2rem;
+  padding: 0 5rem;
 }
 
 /* MEDIA QUERIES */
@@ -426,5 +416,20 @@ ul {
   .carousel__slider{
     padding: 0;
     margin: 0;
+  }
+
+  .ul-div-team{
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 1rem;
+    gap: 1rem;
+  }
+
+  .img-carousel{
+    height: 8rem;
+    text-align: center;
+  }
+
+  .li-team{
+    margin-top: 1rem;
   }
 }
