--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ h1, h2, h3, h4, h5, h6 {
     box-shadow: inset 0 0 0 0.25rem #fff;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
+    text-decoration: none;
 }
 
 .cr-btn:hover, .cr-btn:focus {
@@ -1567,6 +1568,7 @@ body.menu-open {
 .footer .contact-info-holder .contact-info {
     font-family: "Lalezar", cursive;
     color: #fff;
+    text-decoration: none;
     font-size: 4.8rem;
 }
 
@@ -1575,6 +1577,7 @@ body.menu-open {
     color: #fff;
     font-size: 4.8rem;
     -webkit-transition: all 0.3s ease;
+    text-decoration: none;
     transition: all 0.3s ease;
 }
 
@@ -1607,6 +1610,7 @@ body.menu-open {
     color: #fff;
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
+    text-decoration: none;
 }
 
 .footer .contact-info-holder .social-media .social-link-holder a:hover, .footer .contact-info-holder .social-media .social-link-holder a:focus {
@@ -2050,6 +2054,7 @@ body.menu-open {
 
     .cr-btn {
         font-size: 1rem;
+        text-decoration: none;
     }
 
     .header {
@@ -2110,9 +2115,10 @@ body.menu-open {
     }
 
     .footer .contact-info-holder .contact-info a {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         margin: 0;
         padding: 0;
+        text-decoration: none;
     }
 
     .footer .contact-info-holder .social-media .social-link-holder a {
