--- a/css/Utils.css
+++ b/css/Utils.css
@@ -261,7 +261,7 @@ ul {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
-  padding: 0 1rem 3rem 2rem;
+  padding: 2rem 1rem 3rem 2rem;
   place-items: center end;
 }
 
@@ -445,7 +445,7 @@ ul {
     place-items: center center;
     padding: 0;
     margin: 0;
-    padding-bottom: 2rem;
+    padding: 2rem 0;
   }
 
   .iframe-films{
